--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    
+    "prebuild": "CI=true react-scripts test --colors",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "now ./build",
-    "postdeploy": "now alias -A ./build/now.json"
+    "deploy": "vercel --prod"
   },
   "eslintConfig": {
     "extends": "react-app"
